welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:10: error: ';' expected but '<-' found.
		tab(c) <- getCouleurSol()
                       ^Array2:13: error: ';' expected but '<-' found.
	tab(hauteur - 1) <- getCouleurSol()
                         ^